[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/images.png" type="Texture" id=1]
[ext_resource path="res://Sprites/congresso.jpg" type="Texture" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://mixkit-keyboard-key-presses-2534 (mp3cut.net).wav" type="AudioStream" id=4]
[ext_resource path="res://202312__7778__dbl-click.ogg" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[node name="World" type="Node2D"]
position = Vector2( 0, -4 )
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 511.5, 303 )
scale = Vector2( 1.33203, 1.47291 )
texture = ExtResource( 2 )

[node name="label" type="Label" parent="."]
margin_left = 220.0
margin_top = 73.0
margin_right = 838.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="president_image" type="Sprite" parent="."]
position = Vector2( 495, 347 )
scale = Vector2( 1.16222, 1.28222 )
texture = ExtResource( 1 )

[node name="button" type="Button" parent="."]
margin_left = 364.0
margin_top = 513.0
margin_right = 628.0
margin_bottom = 587.0
text = "Come√ßar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Typing_song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="button_down" from="button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
